<resources>
    <string name="app_name">Netflix</string>

    <string name="start_up">Start up Screen</string>
    <string name="start_btn">Get Started</string>

    <string name="login">Sign In</string>
    <string name="login_btn">Sign In</string>
    <string name="login_intro">Sign In to continue</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone number</string>

    <string name="welcome_back">Welcome Back</string>

    <string name="register">Sign Up</string>
    <string name="register_intro">Sign Up for free</string>
    <string name="regis_btn">Sign Up</string>


    <string name="intro">Welcome to Netflix!</string>
    <string name="intro_desc">Join With Us and Watch The Latest Movie Now in Netflix</string>
    <string name="create_new_acc">Create New Account</string>
    <string name="log_back_in">Log Back In</string>

    <string name="forgot_pass">Forgot Your Password?</string>
    <string name="new_to">New to Netflix?</string>
    <string name="create_new"> Create Account</string>
    <string name="have_acc">If you have account?</string>

    <string name="signup_google">Sign up with Google</string>

    <!-- bottom nav string -->
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="download">Download</string>
    <string name="search">Search</string>


    <string name="movies">Movies</string>
    <string name="tv_series"> TV Series</string>
    <string name="categories">Categories</string>
    <string name="categories_02">\u2022 Categories</string>

    <string name="btn_list">My list</string>
    <string name="btn_play">Play</string>
    <string name="btn_info_film">Information</string>
    <string name="title_ct_release">Release in 2022</string>
    <string name="netflix_series">Netflix series</string>


    <!-- More fragment -->
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="watch_list">Watch list</string>
    <string name="notification">Notification</string>

    <string name="log_out">Log Out</string>
    <string name="confirm_log_out">Confirm Logout</string>
    <string name="logout_desc">Are you sure you want to logout</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="save_btn">Save</string>
    <string name="change_pass">Change password</string>

    <string name="acc_name">Account One</string>

    <!-- watch_list_item_title -->
    <string name="my_list"> My list</string>
    <string name="continue_watching">Continue watching</string>
    <string name="list_you_liked">TV Shows 4 Movies You\'re like</string>
    <string name="lorem_ispum">Lorem ispum</string>
    <string name="back_button">Return\n</string>
    <string name="bookmark">Bookmark\n</string>
    <string name="share">Share</string>
    <string name="star">Star Rate\n</string>
    <string name="play">Play</string>

    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>

    <string name="movie_poster_cast">Movie poster cast\n</string>
    <string name="cast_name">Kai Colin\n</string>
    <string name="trailers">Trailer\n</string>
    <string name="images">Images</string>
    <string name="smilar">Similar</string>
    <string name="movie_poster">Movie Poster\n</string>
    <string name="cast_poster">Cast Poster\n</string>

    <string name="trailer_title">Trailer Title</string>
    <string name="title">Title Movie\n</string>
    <string name="netflix_logo">Netflix Logo</string>
    <string name="now_playing_movies">Now playing movies</string>
    <string name="see_all">See all</string>

    <string name="birthday">Birthday</string>
    <string name="place_of_birth">Place of Birth\n</string>
    <string name="biography">Biography</string>


    <string name="list_image">List Image</string>
    <string name="empty_download">You Download Nothing</string>
    <string name="empty_down_desc">It seems that you haven\'t downloaded \n any movies or series</string>
    <string name="download_desc">This Feature is Not Downloading Movie Just Saves to Room Database</string>
    <string name="hide">Hide</string>

    <string name="delete">Delete</string>
    <string name="delete_message">Are you sure you want to delete this download?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_play_movie">PlayMovieActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="forget_password">Forgot Password</string>
    <string name="forgot_pass_intro">Provide your account\'s email for which you want to reset your password</string>
    <string name="next">Next</string>
    <string name="otp_verify">OTP Verification</string>
    <string name="otp_code">OTP code</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend code</string>
    <string name="create_new_pass">Reset Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_password">New password</string>
    <string name="update">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="password_updated">Password Updated</string>
    <string name="password_updated_success_message">Your password has been updated</string>
    <string name="back_to_login">Login</string>


</resources>
