<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btnHome"
        android:icon="@drawable/rounded_home_24"
        android:iconTint="@color/white"
        android:title="@string/home" />
    <item
        android:id="@+id/btnSearch"
        android:title="@string/search"
        android:iconTint="@color/white"
        android:icon="@drawable/rounded_search_24"/>
    <item
        android:id="@+id/btnDownload"
        android:title="@string/download"
        android:iconTint="@color/white"
        android:icon="@drawable/rounded_download_for_offline_24"/>
    <item
        android:id="@+id/btnMore"
        android:title="@string/more"
        android:iconTint="@color/white"
        android:icon="@drawable/rounded_dehaze_24"/>
</menu>