<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".fragment.ResetPasswordSucessFragment">


    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/googlesans_bold"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/password_updated"
        android:textColor="@color/netflix_dark"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imvSuccessIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="@id/tvLabel"
        app:layout_constraintEnd_toEndOf="@id/tvLabel"
        app:layout_constraintTop_toBottomOf="@id/tvLabel"
        android:src="@drawable/round_check_circle_24"
        app:tint="@color/netflix_red" />


    <TextView
        android:id="@+id/tvSuccessDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toStartOf="@id/imvSuccessIcon"
        app:layout_constraintEnd_toEndOf="@id/imvSuccessIcon"
        app:layout_constraintTop_toBottomOf="@id/imvSuccessIcon"
        android:gravity="center"
        android:text="@string/password_updated_success_message"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBackToLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/back_to_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/tvSuccessDesc"
        app:layout_constraintEnd_toEndOf="@id/tvSuccessDesc"
        app:layout_constraintTop_toBottomOf="@id/tvSuccessDesc"/>
</androidx.constraintlayout.widget.ConstraintLayout>