<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MovieDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cstNav"
        android:layout_width="match_parent"
        android:layout_height="335dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imvBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/banner_one"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/effect_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cstHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imvBack"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/imvLogoApp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/acc_name"
                android:src="@drawable/netflix_logo_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cstNav">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvTitleMovie"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/title"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMyList"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_list"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="11.75sp"
                    android:fontFamily="@font/poppins_regular"
                    app:icon="@drawable/rounded_add_24"
                    app:iconGravity="top"
                    app:iconTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/year"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/time"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/lnlPlayButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_btn"
                    android:backgroundTint="@color/netflix_red"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/imvPlayIcon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="8dp"
                        android:drawableTint="@color/white"
                        android:src="@drawable/round_play_arrow_24"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/play"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnlDownloadButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_btn"
                    android:backgroundTint="@color/gray_500"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/imvDownload"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="8dp"
                        android:drawableTint="@color/white"
                        android:src="@drawable/rounded_download_for_offline_24"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/download"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/genresLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvGenreMovie_More"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_genre_details" />

                <TextView
                    android:id="@+id/tvGenreMovie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text="Genres" />
            </LinearLayout>

            <com.borjabravo.readmoretextview.ReadMoreTextView
                android:id="@+id/tvOverView_More"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:colorClickableText="@color/blue_600"
                app:trimCollapsedText="@string/show_less"
                app:trimExpandedText="@string/show_more"
                app:trimLength="50"
                app:trimMode="trimModeLine"
                tools:text="Overview" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvViewCast_More"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_view_cast" />
            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout_More"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/tab_background"
                android:translationZ="1dp"
                app:layout_scrollFlags="scroll|enterAlways"
                app:tabBackground="@drawable/tab_background"
                app:tabGravity="fill"
                app:tabIndicator="@drawable/indicator_bg"
                app:tabIndicatorColor="@color/netflix_red"
                app:tabIndicatorFullWidth="true"
                app:tabIndicatorHeight="3.75dp"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/white"
                app:tabTextAppearance="@style/CustomText"
                app:tabTextColor="@color/gray_400">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trailers" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smilar" />
            </com.google.android.material.tabs.TabLayout>

            <View
                android:id="@+id/tabLine"
                android:layout_width="match_parent"
                android:layout_height="1.75dp"
                android:layout_marginTop="-4dp"
                android:background="@drawable/indicator_bg"
                android:backgroundTint="@color/gray_400" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_marginTop="12dp" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>


